[package]
name = "ailint"
version = "0.1.0"
author = ["Igor Guerrero <igorgue@protonmail.com>"]
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"
tokio = { version = "1.26", features = ["macros", "rt-multi-thread"]  }
env_logger = "0.10"
